fix bug: width of progs icon in switch

--- a/switcher.kv
+++ b/switcher.kv
@@ -46,7 +46,7 @@
         spacing: 20
         x: root.x+20
         height: 100
-        width: (len(progs_layout.children)*100)
+        width: (len(progs_layout.children)*100)+((len(progs_layout.children)-1)*20)
 
 [ButtonItem@Button]:
     background_normal: ctx.path
